syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

service HistoryService {
  rpc GetHistory (Void) returns (GetHistoryResponse);
}

message Void {
  
}
message GetHistoryResponse {
    repeated Message messages= 1;
} 
message Message {
    int32 number = 1;
    string text = 2;
    int64 date = 3;
} 

